--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,9 @@
 Source: libxau
 Section: x11
 Priority: optional
-Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
-Uploaders: Cyril Brulebois <kibi@debian.org>
+Maintainer: Pexip AS <packaging@pexip.com>
+XSBC-Pexip-Original-Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
+XSBC-Pexip-Original-Uploaders: Cyril Brulebois <kibi@debian.org>
 Build-Depends:
  debhelper (>= 8.1.3),
  pkg-config,
@@ -15,6 +16,7 @@ Build-Depends:
 Standards-Version: 3.9.2
 Vcs-Git: git://git.debian.org/git/pkg-xorg/lib/libxau
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/libxau.git
+XS-Pexip-Upstream: http://archive.ubuntu.com/ubuntu/ precise
 
 Package: libxau6
 Section: libs
