--- a/debian/control
+++ b/debian/control
@@ -16,7 +16,7 @@ Build-Depends:
 Standards-Version: 3.9.4
 Vcs-Git: git://git.debian.org/git/pkg-xorg/lib/libxau
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/lib/libxau.git
-XS-Pexip-Upstream: http://ftp.debian.org/debian/ jessie
+XS-Pexip-Upstream: http://ftp.debian.org/debian/ stretch
 
 Package: libxau6
 Section: libs
