--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends:
 Standards-Version: 4.5.1
 Vcs-Git: https://salsa.debian.org/xorg-team/lib/libxau
 Vcs-Browser: https://salsa.debian.org/xorg-team/lib/libxau
-XS-Pexip-Upstream: http://deb.debian.org/debian/ bullseye
+XS-Pexip-Upstream: http://deb.debian.org/debian/ bookworm
 
 Package: libxau6
 Section: libs
